mail/network-policy-rspamd-spam-trainer.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rspamd-allow-ingress-spam-trainer
  namespace: mail
spec:
  podSelector:
    matchLabels:
      app: rspamd
      tier: mail
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: rspamd-spam-trainer
              tier: mail
      ports:
        - protocol: TCP
          port: 11334
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rspamd-spam-trainer-allow-egress
  namespace: mail
spec:
  podSelector:
    matchLabels:
      app: rspamd-spam-trainer
      tier: mail
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: rspamd
              tier: mail
      ports:
        - protocol: TCP
          port: 11334
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
